--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,4 +9,9 @@
   <p class="font-light flex flex-col">
   <%= timeago(@post.created_at) %>
   <span>on <%= @post.created_at.to_s(:long) %></span></p>
+  <br>
+  <p><%= "> #{@post.likes.count} likes" %></p>
+  <% if current_user && current_user.likes.find_by(post: @post).blank? %>
+    <%= link_to '❤️ Like', post_likes_path(@post), class: 'button', method: :post %>
+  <% end %>
 </div>
